--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,26 @@
 
 
     <com.example.panlibrary.PanView
-        android:layout_width="226dp"
-        android:layout_height="194dp"
+        android:layout_width="166dp"
+        android:layout_height="144dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintHorizontal_bias="0.497"
+        android:visibility="gone"
+        android:id="@+id/panView" />
+
+    <com.example.panlibrary.CircleImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/panView" />
 </android.support.constraint.ConstraintLayout>
