--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,16 @@
 
 
     <com.example.panlibrary.PanView
-        android:layout_width="299dp"
-        android:layout_height="296dp"
+        android:layout_width="149dp"
+        android:layout_height="385dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="153dp"
-        android:id="@+id/panView" />
+        android:id="@+id/panView"
+        app:layout_constraintHorizontal_bias="0.527" />
 
     <com.example.panlibrary.CircleImageView
         android:layout_width="100dp"
