--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,12 @@
 
 
     <com.example.panlibrary.PanView
-        android:layout_width="252dp"
-        android:layout_height="449dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="261dp"
+        android:layout_height="234dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="77dp"
         android:id="@+id/panView"
-        app:layout_constraintHorizontal_bias="0.496" />
+        android:layout_marginTop="184dp" />
 
 </android.support.constraint.ConstraintLayout>
